--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "this-day-in-history",
+  "version": "1.0.0",
+    "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "vite preview --port $PORT"
   },
   "dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "vite": "^7.0.6"
-},
-"devDependencies": {
-  "@vitejs/plugin-react": "^4.7.0"
-}
-
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite": "^7.0.6"
+    }
 }
